--- a/微前端/self-example/package.json
+++ b/微前端/self-example/package.json
@@ -4,6 +4,10 @@
   "description": "A simple example of how to use webpack with single-spa",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "webpack-dev-server --open",
+    "build": "webpack --config webpack.config.js -p"
+  },
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -11,7 +15,7 @@
     "react-transition-group": "^4.1.1",
     "single-spa": "^4.3.4",
     "single-spa-react": "^2.10.2",
-    "single-spa-vue": "^1.4.0",
+    "single-spa-vue": "^1.5.4",
     "vue": "^2.6.10"
   },
   "devDependencies": {
