--- a/微前端/single-spa-portal-example-master/package.json
+++ b/微前端/single-spa-portal-example-master/package.json
@@ -35,7 +35,9 @@
   },
   "author": "Justin McMurdie",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "yarn-run-all": "^3.1.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
