--- a/微前端/self-complex-example/portal/package.json
+++ b/微前端/self-complex-example/portal/package.json
@@ -4,24 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "concurrently \"npm run start:config\" \"npm run start:common-deps\"",
+    "start:config": "webpack-dev-server --config ./webpack.config.config.dev.js --port 8233",
+    "start:common-deps": "webpack-dev-server --config ./webpack.common-deps.config.dev.js --port 8234",
+    "build": "npm run build:config && npm run build:common-deps",
+    "build:config": "webpack --config ./webpack.config.config.js -p",
+    "build:common-deps": "webpack --config ./webpack.common-deps.config.js -p"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.6.3",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "concurrently": "^5.0.0",
-    "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^3.2.0",
-    "style-loader": "^1.0.0",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2"
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0",
+    "@babel/preset-env": "^7.4.3",
+    "babel-core": "6.26.3",
+    "babel-loader": "8.0.0",
+    "clean-webpack-plugin": "0.1.19",
+    "concurrently": "^4.1.1",
+    "copy-webpack-plugin": "4.5.2",
+    "css-loader": "1.0.0",
+    "style-loader": "0.23.0",
+    "webpack": "4.17.1",
+    "webpack-cli": "3.1.0",
+    "webpack-dev-server": "^3.1.14"
   }
 }
